# movielens-hybrid-recommender

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
reports/: results.csv
scripts/: explore_data.py
src/recsys/: __init__.py  cli.py  config.py  logging_utils.py
src/recsys/data/: __init__.py  download.py  loader.py  matrix.py  split.py
src/recsys/eval/: __init__.py  harness.py  metrics.py  plots.py
src/recsys/models/: __init__.py  base.py  content.py  hybrid.py  item_knn.py  matrix_factorization.py  popularity.py
tests/: conftest.py  test_cli.py  test_data.py  test_harness.py  test_hybrid.py  test_metrics.py  test_models.py
